--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sharp": "^2.8.0",
-    "gatsby-plugin-theme-ui": "^0.3.5",
     "gatsby-source-filesystem": "^2.5.0",
+    "gatsby-theme-blog": "^2.0.5",
     "gatsby-theme-ui-preset": "^1.0.4",
     "gatsby-transformer-sharp": "^2.6.0",
     "prop-types": "^15.7.2",
